--- a/src/doe.Common/doe.Common.csproj
+++ b/src/doe.Common/doe.Common.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{2776BCF2-3F63-4B6E-B94A-93856B88675F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>doe.Common</RootNamespace>
+    <RootNamespace>deleteonerror.Common</RootNamespace>
     <AssemblyName>doe.Common</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -17,18 +17,20 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -36,23 +38,32 @@
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Diagnostic\Log.cs" />
-    <Compile Include="IO\FileInfoExtension.cs" />
+    <Compile Include="Application\Env.cs" />
+    <Compile Include="Diagnostics\Log.cs" />
+    <Compile Include="Diagnostics\Model\BackgroundProcessResult.cs" />
+    <Compile Include="Diagnostics\Process.cs" />
+    <Compile Include="Extensions\ByteArrayExtension.cs" />
+    <Compile Include="Extensions\StringArrayExtension.cs" />
+    <Compile Include="Extensions\StringExtension.cs" />
+    <Compile Include="Extensions\FileInfoExtension.cs" />
     <Compile Include="IO\FileOperation.cs" />
     <Compile Include="IO\FileOperationResult.cs" />
     <Compile Include="IO\ImpersonatedFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\Cryptography\Common.cs" />
+    <Compile Include="Security\Cryptography\RijndaelEnhanced.cs" />
+    <Compile Include="Security\Cryptography\Sha256Hash.cs" />
     <Compile Include="Security\Impersonation\DomainUser.cs" />
     <Compile Include="Security\Impersonation\Impersonation.cs" />
     <Compile Include="Security\Impersonation\ImpersonationLevel.cs" />
     <Compile Include="Security\Impersonation\LogonProvider.cs" />
     <Compile Include="Security\Impersonation\LogonType.cs" />
     <Compile Include="Security\Impersonation\SafeTokenHandle.cs" />
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
